[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solotraveler-cli"
version = "0.1.0"
description = "A command-line toolkit for planning, tracking, and managing solo travel."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Brandon Himpfen" }
]
keywords = ["travel", "solo-travel", "cli", "trip-planning", "itinerary", "travel-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities"
]

dependencies = [
  "rich>=13.0"
]

[project.scripts]
solo = "solotraveler.cli:main"

[project.urls]
Homepage = "https://www.solotraveler.org"
Repository = "https://github.com/brandonhimpfen/solo-traveler-cli"
Issues = "https://github.com/brandonhimpfen/solo-traveler-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
